Changelog
=========

1.0.3 (unreleased)
------------------

- Support a 'queryCatalog' method for backwards-compatibility with ATTopic.
  [davisagli]

- Only display the batch navigation in tabular_view if there are items to 
  display.
  [esteele]


1.0.2 (2012-02-09)
------------------

- Modified the description of the query field.
  [vincentfretin]


1.0.1 (2011-11-24)
------------------

- Fix i18n of query widget.
  [vincentfretin]


1.0 - 2011-07-19
----------------

- Initial release

- Add MANIFEST.in.
  [WouterVH]