@@ -1,24 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:plone="http://namespaces.plone.org/plone"
-    i18n_domain="plone">
-
-  <!-- Ensure Plone's portlets ZCML has already been processed;
-     without this, we may get a permission lookup error -->
-  <include package="plone.app.portlets" />
-
-  <permission
-    id="plone.app.collection.AddCollectionPortlet"
-    title="plone.app.collection: Add collection portlet" />
-
-  <plone:portlet
-    name="plone.app.collection.portlets.Collection"
-    interface=".collectionportlet.ICollectionPortlet"
-    assignment=".collectionportlet.Assignment"
-    view_permission="zope2.View"
-    renderer=".collectionportlet.Renderer"
-    addview=".collectionportlet.AddForm"
-    editview=".collectionportlet.EditForm"
-    />
-
-</configure>
