@@ -1,48 +1,0 @@
-<dl class="portlet portletCollection"
-    i18n:domain="plone"
-    tal:define="collection_url view/collection_url;
-                toLocalizedTime nocall: context/@@plone/toLocalizedTime">
-
-    <dt class="portletHeader">
-        <span class="portletTopLeft"></span>
-        <a tal:attributes="href collection_url" tal:omit-tag="not:view/data/show_more">
-            <span tal:content="view/data/header" />
-        </a>
-        <span class="portletTopRight"></span>
-    </dt>
-
-    <tal:events tal:repeat="obj view/results">
-        <dd class="portletItem"
-            tal:define="oddrow repeat/obj/odd;
-                        item_icon obj/getIcon"
-            tal:attributes="class python:oddrow and 'portletItem even' or 'portletItem odd'">
-
-            <img tal:replace="structure item_icon" />
-
-            <a href="#"
-               class="tile"
-               tal:attributes="href obj/getURL;
-                               title obj/Description">
-                <span tal:replace="obj/Title">
-                 Title
-                </span>
-                <span class="portletItemDetails"
-                      tal:condition="view/data/show_dates"
-                      tal:content="python:toLocalizedTime(obj.Date())">
-                    Date
-                </span>
-            </a>
-        </dd>
-    </tal:events>
-
-    <dd class="portletFooter" tal:condition="view/data/show_more">
-        <span class="portletBottomLeft"></span>
-        <span>
-            <a tal:attributes="href collection_url" i18n:translate="more_url">
-                 More&hellip;
-            </a>
-        </span>
-        <span class="portletBottomRight"></span>
-    </dd>
-
-</dl>
