@@ -29,6 +29,7 @@ setup(name='plone.app.collection',
           'plone.app.portlets',
           'plone.app.testing',
           'plone.app.vocabularies',
+          'plone.portlet.collection',
           'plone.portlets',
           'plone.testing',
           'Products.Archetypes',
