@@ -4,6 +4,11 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
+- Remove the portlet, which duplicates functionality from
+  plone.portlet.collection. The Assignment class is kept for
+  backwards-compatibility.
+  [davisagli]
+
 - Support a 'queryCatalog' method for backwards-compatibility with ATTopic.
   [davisagli]
 
